# ParallelProg

./: LICENCE-README.md  exercises.txt
ex0/0.2/: CMakeLists.txt  norm.cpp  vcpkg.json
ex1/: mandelbrot.c
ex1/jobified/: CMakeLists.txt  jobmandel.cpp
lab1/ex0/0.1/: CMakeLists.txt  main.cpp
lab1/ex0/0.2/: norm.h  scope_profile.h
lab1/ex1/jobified/: jobmandel.cpp  scope_profile.h
lab1/ex1/jobified/WickedEngine/: wiJobSystem.cpp
lab2/: exercises.txt
lab2/intro/: CMakeLists.txt  introOpenMP.c
lab2/mandel/: CMakeLists.txt  mandel.cpp
lab2/mandelbrot/: CMakeLists.txt  mandelbrot.cpp
lab2/norm/: CMakeLists.txt  norm.cpp  norm.h
lab3/: exercises.txt
lab3/norm/: CMakeLists.txt  norm.cpp  scope_profile.h
lab3/quicksort/: CMakeLists.txt  qs.cpp  qsJob.h  scope_profile.h
lab4/: CMakeLists.txt  Matrix_mult.cu  Matrix_pow.cu  exercises.txt  helper.c  helper.h  simple.cu
lab5/: CMakeLists.txt  helper.cpp  helper.h  imagConv.cu  imagConvBackup.cu  joanne512.ppm  report.txt  scope_profile.h
